# enerator

./: .gitignore  README.md  noxfile.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  setup.cfg  spelling.txt
src/enerator/: __init__.py  build.py  file.py  parse.py  template.py
tests/: sample.md  sample_output.html  sample_template.html  test_build.py  test_enerator.py  test_template.py
tests/src/: sample2.md  sample3.md
tests/src/subfolder/: sample4.md
tests/tpl/: sample_template.html  sample_template.md
