[tool.poetry]
name = "enerator"
version = "0.1.0"
description = ""
authors = ["Jonathan Bowman <git@bowmanjd.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-frontmatter = "^1.0.0"
Jinja2 = "^2.11.3"
typer = "^0.3.2"
cmarkgfm = "^0.5.3"
Pygments = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
darglint = "^1.7.0"
flake8 = "^3.9.0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.2"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.3.1"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^1.0.0"
flake8-isort = "^4.0.0"
flake8-pytest-style = "^1.4.0"
flake8-spellcheck = "^0.24.0"
pep8-naming = "^0.11.1"
pynvim = "^0.4.3"
mypy = "^0.812"
coverage = {extras = ["toml"], version = "^5.5"}
toml = "^0.10.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.coverage.run]
concurrency = ["multiprocessing"]
command_line = "-m pytest"
parallel = true
source = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
